removed load from URL options, combining resource loading and file loading